--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.5.2",
     "eleventy-plugin-babel": "^1.0.1",
     "eleventy-plugin-purgecss": "^0.2.0",
-    "postcss-nested": "^5.0.6"
+    "postcss-nested": "^5.0.6",
+    "swiper": "^7.3.2"
   }
 }
