--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "@splidejs/splide": "^3.6.9",
     "eleventy-plugin-babel": "^1.0.1",
     "eleventy-plugin-purgecss": "^0.2.0",
     "postcss-nested": "^5.0.6"
   }
 }
-
