--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "clean": "rm -rf _site",
     "hasher": "node csshash.js",
     "start": "npm-run-all clean hasher --parallel dev:*",
-    "dev:postcss-swiper": "postcss src/assets/css/swiper.css -o _site/css/swiper.css --config ./postcss.config.js -w",
+    "dev:postcss-splide": "postcss src/assets/css/splide.css -o _site/css/splide.css --config ./postcss.config.js -w",
     "dev:postcss": "postcss src/assets/css/index.css -o _site/css/index.css --config ./postcss.config.js -w",
     "dev:eleventy": "ELEVENTY_ENV=development npx @11ty/eleventy --serve --quiet --incremental",
     "build": "NODE_ENV=production npm-run-all clean hasher --parallel prod:*",
     "prod:postcss": "postcss src/assets/css/index.css -o _site/css/$(cat csshash) --config ./postcss.config.js",
-    "prod:postcss-swiper": "postcss src/assets/css/swiper.css -o _site/css/swiper.css --config ./postcss.config.js",
+    "prod:postcss-splide": "postcss src/assets/css/splide.css -o _site/css/splide.css --config ./postcss.config.js",
     "prod:eleventy": "ELEVENTY_ENV=production npx @11ty/eleventy --output=./_site"
   },
   "keywords": [],
