--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -9,17 +9,28 @@ on:
 
 jobs:
   build_deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+
+      - name: Use Node.js $
+        uses: actions/setup-node@v1
         with:
-          node-version: "16"
-      - name: Build
-        uses: mfyz/actions-eleventy@master
+          node-version: 16
+
+      - name: Install dependencies & build
+        run: |
+          npm i
+          npm run build
+
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v1.1.0
-        env:
-          PUBLISH_DIR: _site
-          PUBLISH_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: ./_site
+          publish_branch: master
+          github_token: ${{ secrets.GITHUB_TOKEN }}
