--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -18,12 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Use Node.js $
+      - name: Setup node.js
         uses: actions/setup-node@v1
         with:
           node-version: 16
 
-      - name: Install dependencies & build
+      - name: Install & build
         run: |
           npm i
           npm run build
