--- a/package.json
+++ b/package.json
@@ -30,17 +30,13 @@
     "cssnano": "^5.0.14",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eleventy-plugin-svg-contents": "^0.7.0",
-    "glob": "^7.2.0",
-    "glob-all": "^3.2.1",
     "html-minifier": "^4.0.0",
     "markdown-it": "^12.3.0",
-    "md5": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.1.0",
-    "rimraf": "^3.0.2"
+    "postcss-preset-env": "^7.1.0"
   }
 }
