--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "codeadrian",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "private": true,
   "scripts": {
     "clean": "rm -rf _site",
     "start": "npm-run-all clean --parallel dev:*",
     "dev:postcss": "postcss src/assets/css/index.css -o _site/css/index.css --config ./postcss.config.js -w",
-    "dev:eleventy": "ELEVENTY_ENV=development npx @11ty/eleventy --serve --quiet --incremental",
-    "build": "NODE_ENV=production npm-run-all clean --parallel prod:*",
+    "dev:eleventy": "cross-env ELEVENTY_ENV=development npx @11ty/eleventy --serve --quiet --incremental",
+    "build": "cross-env NODE_ENV=production npm-run-all clean --parallel prod:*",
     "prod:postcss": "postcss src/assets/css/index.css -o _site/css/index.css --config ./postcss.config.js",
-    "prod:eleventy": "ELEVENTY_ENV=production npx @11ty/eleventy --output=./_site"
+    "prod:eleventy": "cross-env ELEVENTY_ENV=production npx @11ty/eleventy --output=./_site"
   },
   "keywords": [],
   "author": "Adrian Bece <adrianbece@live.com>",
@@ -26,19 +26,22 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-img": "^1.0.0",
+    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-img": "^2.0.1",
     "@splidejs/splide": "^3.6.9",
-    "cssnano": "^5.0.14",
-    "eleventy-plugin-error-overlay": "^0.1.2",
-    "external-svg-loader": "^1.4.0",
+    "cssnano": "^5.1.14",
+    "eleventy-plugin-error-overlay": "^1.0.0",
+    "external-svg-loader": "^1.6.1",
     "html-minifier": "^4.0.0",
-    "markdown-it": "^12.3.0",
+    "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.0.2",
-    "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.1.0"
+    "postcss": "^8.4.18",
+    "postcss-cli": "^10.0.0",
+    "postcss-import": "^15.0.0",
+    "postcss-nested": "^6.0.0",
+    "postcss-preset-env": "^7.8.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
