--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeadrian",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "",
   "private": true,
   "scripts": {
@@ -26,21 +26,21 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-img": "^4.0.2",
     "@splidejs/splide": "^4.1.4",
-    "cssnano": "^6.1.2",
-    "external-svg-loader": "^1.7.1",
-    "html-minifier": "^4.0.0",
-    "markdown-it": "^14.1.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0",
-    "postcss-import": "^16.1.0",
-    "postcss-nested": "^6.0.1",
-    "postcss-preset-env": "^9.5.4"
+    "external-svg-loader": "^1.7.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@11ty/eleventy": "^3.0.0",
+    "markdown-it": "^14.1.0",
+    "@11ty/eleventy-img": "^5.0.0",
+    "cssnano": "^7.0.6",
+    "npm-run-all": "^4.1.5",
+    "html-minifier": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.1.3"
   }
 }
