--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeadrian",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Personal site by Adrian Bece",
   "private": true,
   "scripts": {
@@ -16,9 +16,10 @@
   "author": "Adrian Bece <adrianbece@live.com>",
   "license": "MIT",
   "browserslist": [
-    "> 1% and last 3 versions",
+    "last 2 versions",
     "not dead",
-    "not ie > 1",
+    "not < 0.5%",
+    "not ie <= 11",
     "not op_mini all",
     "not op_mob > 1"
   ],
@@ -26,19 +27,19 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@grimlink/eleventy-plugin-lucide-icons": "^2.1.1",
+    "@grimlink/eleventy-plugin-lucide-icons": "^2.1.2",
     "@splidejs/splide": "^4.1.4",
     "external-svg-loader": "^1.7.1"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
-    "@11ty/eleventy-img": "^6.0.0",
+    "@11ty/eleventy-img": "^6.0.1",
     "cross-env": "^7.0.3",
     "cssnano": "^7.0.6",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "markdown-it": "^14.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^7.0.2",
